tests/snapshots/shell__unfinished_infix.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected vaild expression
   ╭─[unfinished_infix:1:11]
   │
 1 │ echo .(1 +)
   │           ┬  
   │           ╰── found here
───╯

